--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,9 @@ services:
       - db-store:/var/lib/postgresql/data
 
     environment:
-      POSTGRES_USER: 'your_username'
-      POSTGRES_PASSWORD: 'your_password'
-      POSTGRES_DB: 'your_database_name'
+      POSTGRES_USER: '${user}'
+      POSTGRES_PASSWORD: '${pwd}'
+      POSTGRES_DB: '${DBname}'
 volumes:
   db-store:  
   
